[package]
name = "nom-rfc8288"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A nom based parser for RFC 8288"
homepage = "https://github.com/mishazharov/nom-rfc8288"
documentation = "https://docs.rs/nom-rfc8288"
repository = "https://github.com/mishazharov/nom-rfc8288"
readme = "README.md"

[lib]
name = "nom_rfc8288"
path = "src/lib.rs"

[dependencies]
nom = "8.0.0"
nom-language = "0.1.0"
thiserror = "2.0.13"
itertools = "0.14.0"
